--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         yesButton.style.height = `${buttonHeight}px`; // Update button height
         yesButton.style.width = `${buttonWidth}px`;
         yesButton.style.fontSize = `${fontSize}px`; // Update font size
-        if (noClickCount < 6) {
-          noButton.textContent = ["No", "Are you sure?", "Pookie please", "Don't do this to me :(", "You're breaking my heart", "I'm gonna cry..."][noClickCount];
+        if (noClickCount < 7) {
+          noButton.textContent = ["No", "Are you sure?", "Tricia please", "Don't do this to me :(", "You're breaking my heart", "OMY DAYS JUST SAY YES...","OK LAST TIME FR!!!"][noClickCount];
         }
       }
     });
