--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Valentines Day</title>
+  <title>Valentine's Day</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .gradient-background {
-      background: rgb(255, 208, 229);
       background: linear-gradient(180deg, rgba(255, 208, 229, 1) 0%, rgba(255, 232, 242, 1) 36%, rgba(255, 255, 255, 1) 100%);
     }
 
@@ -16,15 +15,9 @@
     }
 
     @keyframes bounce2 {
-      0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0);
-      }
-      40% {
-        transform: translateY(-20px);
-      }
-      60% {
-        transform: translateY(-10px);
-      }
+      0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+      40% { transform: translateY(-20px); }
+      60% { transform: translateY(-10px); }
     }
   </style>
 </head>
@@ -32,9 +25,9 @@
   <div class="flex items-center justify-center h-screen">
     <div class="flex flex-col items-center p-4">
       <img id="imageDisplay" src="https://i.pinimg.com/originals/93/c4/d7/93c4d735209e31b407210a1dbebd16c3.gif" 
-     alt="Cute duck GIF" 
-     class="rounded-md h-[300px]" 
-     style="object-fit: cover;" />
+           alt="Cute duck GIF" 
+           class="rounded-md h-[300px]" 
+           style="object-fit: cover;" />
       <h2 id="valentineQuestion" class="text-4xl font-bold italic text-[#bd1e59] my-4">Will you be my Valentine?</h2>
       <div class="flex gap-4 pt-[20px] items-center" id="responseButtons">
         <button id="yesButton"
@@ -51,47 +44,59 @@
 
   <script type="module">
     import confetti from 'https://cdn.skypack.dev/canvas-confetti';
+
     const yesButton = document.getElementById('yesButton');
     const noButton = document.getElementById('noButton');
     const imageDisplay = document.getElementById('imageDisplay');
     const valentineQuestion = document.getElementById('valentineQuestion');
     const responseButtons = document.getElementById('responseButtons');
-  
+
     let noClickCount = 0;
-    let buttonHeight = 48; // Starting height in pixels
+    let buttonHeight = 48;
     let buttonWidth = 80;
-    let fontSize = 20; // Starting font size in pixels
+    let fontSize = 20;
+
     const imagePaths = [
-      "./images/image1.gif",
-      "./images/image2.gif",
-      "./images/image3.gif",
-      "./images/image4.gif",
-      "./images/image5.gif",
-      "./images/image6.gif",
-      "./images/image7.gif"
+      "https://i.pinimg.com/originals/93/c4/d7/93c4d735209e31b407210a1dbebd16c3.gif", // Original Duck
+      "https://i.pinimg.com/originals/28/87/1a/28871a0d7fa3b3e24a6d63736f7e03b2.gif", // Cute Heart GIF
+      "https://i.pinimg.com/originals/a2/71/84/a27184cf353fffc5b6f3fba8500df91f.gif", // Sad Face GIF
+      "https://i.pinimg.com/originals/49/4b/19/494b19e1d8b8aaf6ea7aee59acb6c6d1.gif", // Crying GIF
+      "https://i.pinimg.com/originals/9f/cd/84/9fcd84b90c7f21df5b2c0df5e92d38d2.gif", // Blush GIF
+      "https://i.pinimg.com/originals/2a/79/c3/2a79c3b161ce537cb3c16f3df117a9e6.gif", // Puppy Eyes GIF
+      "https://i.pinimg.com/originals/15/84/9a/15849a214a4a77dd3bb6d84d71fa3b52.gif"  // Desperate GIF
     ];
-  
+
+    const noMessages = [
+      "No", "Are you sure?", "Last chance", "Tricia please", "Don't do this to me :(", 
+      "You're breaking my heart", "OMY DAYS JUST SAY YES...", "OK LAST TIME FR!!!", 
+      "Fine, no more Valentines", "Okay one last chance frfr this time", 
+      "Click me if you're lame", "TRICIA JUST CLICK YES!!!!!"
+    ];
+
     noButton.addEventListener('click', function() {
-      if (noClickCount < 5) {
+      if (noClickCount < imagePaths.length - 1) {
         noClickCount++;
-        imageDisplay.src = imagePaths[noClickCount];
-        buttonHeight += 35; // Increase height by 5px on each click
+        imageDisplay.src = imagePaths[noClickCount]; // Ensure valid index
+        buttonHeight += 35;
         buttonWidth += 35;
-        fontSize += 25; // Increase font size by 1px on each click
-        yesButton.style.height = `${buttonHeight}px`; // Update button height
+        fontSize += 25;
+        yesButton.style.height = `${buttonHeight}px`;
         yesButton.style.width = `${buttonWidth}px`;
-        yesButton.style.fontSize = `${fontSize}px`; // Update font size
-        if (noClickCount < 12) {
-          noButton.textContent = ["No", "Are you sure?", "Last chance", "Tricia please", "Don't do this to me :(", "You're breaking my heart", "OMY DAYS JUST SAY YES...","OK LAST TIME FR!!!", "fine, no more valentines","okay one last chance frfr this time", "click me if you're lame", "TRICIA JUST CLICK YES!!!!!"][noClickCount];
+        yesButton.style.fontSize = `${fontSize}px`;
+
+        if (noClickCount < noMessages.length) {
+          noButton.textContent = noMessages[noClickCount];
         }
+      } else {
+        noButton.textContent = "You're out of options..."; // Message when max reached
       }
     });
-  
+
     yesButton.addEventListener('click', () => {
-      imageDisplay.src = './images/image7.gif'; // Change to image7.gif
-      valentineQuestion.textContent = "Yayyy!! :3"; // Change the question text
-      responseButtons.style.display = 'none'; // Hide both buttons
-      confetti(); // Trigger confetti animation
+      imageDisplay.src = "https://i.pinimg.com/originals/15/84/9a/15849a214a4a77dd3bb6d84d71fa3b52.gif"; // Happy GIF
+      valentineQuestion.textContent = "Yayyy!! :3";
+      responseButtons.style.display = 'none';
+      confetti();
     });
   </script>  
 </body>
