--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body class="gradient-background">
   <div class="flex items-center justify-center h-screen">
     <div class="flex flex-col items-center p-4">
-      <img id="imageDisplay" src="https://i.pinimg.com/originals/93/c4/d7/93c4d735209e31b407210a1dbebd16c3.gif" 
+      <img id="imageDisplay" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMmpuNHR4ZzR6MTlvMWF2Z3E5dG93NmZ5YXRpMjl4ejdtNm5xOGJkdiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/3ohs7KViF9DMwHZXt6/giphy.gif" 
            alt="Cute duck GIF" 
            class="rounded-md h-[300px]" 
            style="object-fit: cover;" />
@@ -57,13 +57,13 @@
     let fontSize = 20;
 
     const imagePaths = [
-      "https://i.pinimg.com/originals/93/c4/d7/93c4d735209e31b407210a1dbebd16c3.gif", // Original Duck
-      "https://i.pinimg.com/originals/28/87/1a/28871a0d7fa3b3e24a6d63736f7e03b2.gif", // Cute Heart GIF
-      "https://i.pinimg.com/originals/a2/71/84/a27184cf353fffc5b6f3fba8500df91f.gif", // Sad Face GIF
-      "https://i.pinimg.com/originals/49/4b/19/494b19e1d8b8aaf6ea7aee59acb6c6d1.gif", // Crying GIF
-      "https://i.pinimg.com/originals/9f/cd/84/9fcd84b90c7f21df5b2c0df5e92d38d2.gif", // Blush GIF
-      "https://i.pinimg.com/originals/2a/79/c3/2a79c3b161ce537cb3c16f3df117a9e6.gif", // Puppy Eyes GIF
-      "https://i.pinimg.com/originals/15/84/9a/15849a214a4a77dd3bb6d84d71fa3b52.gif"  // Desperate GIF
+      "https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMmpuNHR4ZzR6MTlvMWF2Z3E5dG93NmZ5YXRpMjl4ejdtNm5xOGJkdiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/3ohs7KViF9DMwHZXt6/giphy.gif", // Cute Duck
+      "https://media.giphy.com/media/26AHONQ79FdWZhAI0/giphy.gif", // Sad crying cat
+      "https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbXQzNnY2d3ppM3JldWkxcjE0MmY3eDBwaGZxY3V5bmdjN2I2bzVmeSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/l2JJKs3I69qfaQleE/giphy.gif", // Puppy eyes
+      "https://media.giphy.com/media/3o6Zt481isNVuQI1l6/giphy.gif", // Sad bear waving
+      "https://media.giphy.com/media/VbnUQpnihPSIgIXuZv/giphy.gif", // Heartbroken Pikachu
+      "https://media.giphy.com/media/xT5LMV0HsaWRSPU3aU/giphy.gif", // Crying panda
+      "https://media.giphy.com/media/5xaOcLT2GQO8q3j9n9m/giphy.gif"  // Begging puppy
     ];
 
     const noMessages = [
@@ -93,7 +93,7 @@
     });
 
     yesButton.addEventListener('click', () => {
-      imageDisplay.src = "https://i.pinimg.com/originals/15/84/9a/15849a214a4a77dd3bb6d84d71fa3b52.gif"; // Happy GIF
+      imageDisplay.src = "https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYnAzNTFqZm9nNDBqMXdmMTV1NjNpaTNkbGJ6MjBhYWl6NjlzYXZxNCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/YTbZzCkRQbJLy/giphy.gif"; // Happy celebration GIF
       valentineQuestion.textContent = "Yayyy!! :3";
       responseButtons.style.display = 'none';
       confetti();
