--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     yesButton.addEventListener('click', () => {
       // Change the image and message for "Yes" button
       imageDisplay.src = 'https://i.pinimg.com/originals/86/59/2b/86592b3baa46ba35b6ca9c9452e773a6.gif'; // Custom GIF for "Yes"
-      valentineQuestion.textContent = "Yayyy!! I LOVE YOU : )"; // Change the question text
+      valentineQuestion.textContent = "Yayyy!! :3"; // Change the question text
       responseButtons.style.display = 'none'; // Hide both buttons
       confetti(); // Trigger confetti animation
     });
